[gd_scene load_steps=11 format=2]

[ext_resource path="res://VectorHandle.gd" type="Script" id=1]
[ext_resource path="res://VectorPoint.gd" type="Script" id=2]
[ext_resource path="res://VectorPath.gd" type="Script" id=3]
[ext_resource path="res://VectorFill.gd" type="Script" id=5]
[ext_resource path="res://VectorStroke.gd" type="Script" id=6]
[ext_resource path="res://VectorCollisionPolygon.gd" type="Script" id=7]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.463 ), 0.0, 0.0, 0, 0, Vector2( 0.253142, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.427662, 0.169 ), 0.0, 0.0, 0, 0, Vector2( 0.701692, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.463 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.253142, 0.427662, 0.701692, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 0.101961, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VectorPath/VectorPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21, 23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VectorPath/VectorPoint:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VectorPath/VectorPoint:stroke_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VectorPath/VectorPoint4:stroke_width")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "test"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VectorPath/VectorPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 21, 23 ), Vector2( 68, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VectorPath/VectorPoint:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 87.3513 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VectorPath/VectorPoint:stroke_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VectorPath/VectorPoint4:stroke_width")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="TestScene" type="Node2D"]

[node name="VectorPath" type="Node2D" parent="."]
script = ExtResource( 3 )
bake_interval = 5.0

[node name="VectorPoint" type="Node2D" parent="VectorPath"]
position = Vector2( 21, 23 )
script = ExtResource( 2 )
stroke_width = 0.463

[node name="VectorHandle" type="Node2D" parent="VectorPath/VectorPoint"]
position = Vector2( -13.0885, 13.9737 )
script = ExtResource( 1 )

[node name="VectorHandle2" type="Node2D" parent="VectorPath/VectorPoint"]
position = Vector2( 13.9115, -19.0263 )
script = ExtResource( 1 )

[node name="VectorPoint2" type="Node2D" parent="VectorPath"]
position = Vector2( 112, 69 )
rotation = 0.737223
script = ExtResource( 2 )

[node name="VectorHandle" type="Node2D" parent="VectorPath/VectorPoint2"]
position = Vector2( -22, 8 )
script = ExtResource( 1 )

[node name="VectorHandle2" type="Node2D" parent="VectorPath/VectorPoint2"]
position = Vector2( 21, -7 )
script = ExtResource( 1 )

[node name="VectorPoint3" type="Node2D" parent="VectorPath"]
position = Vector2( 156, 115 )
rotation = 2.95033
script = ExtResource( 2 )
stroke_width = 0.169
stroke_color = Color( 0.101961, 0, 1, 1 )

[node name="VectorHandle" type="Node2D" parent="VectorPath/VectorPoint3"]
position = Vector2( -22, 8 )
script = ExtResource( 1 )

[node name="VectorHandle2" type="Node2D" parent="VectorPath/VectorPoint3"]
position = Vector2( 21, -7 )
script = ExtResource( 1 )

[node name="VectorPoint4" type="Node2D" parent="VectorPath"]
position = Vector2( 51, 134 )
rotation = 4.22409
scale = Vector2( 2.40784, 4.00446 )
script = ExtResource( 2 )

[node name="VectorHandle" type="Node2D" parent="VectorPath/VectorPoint4"]
position = Vector2( -22, 8 )
script = ExtResource( 1 )

[node name="VectorHandle2" type="Node2D" parent="VectorPath/VectorPoint4"]
position = Vector2( 21, -7 )
script = ExtResource( 1 )

[node name="VectorFill2" type="Polygon2D" parent="."]
position = Vector2( 364, 4 )
scale = Vector2( -0.978558, 0.988084 )
polygon = PoolVector2Array( 21, 23, 24.909, 19.8899, 29.8407, 19.1009, 34.7864, 19.8852, 39.5202, 21.481, 44.0782, 23.537, 48.4939, 25.8802, 52.8022, 28.4191, 57.0288, 31.0988, 61.1858, 33.8782, 65.2839, 36.7281, 69.3509, 39.6401, 73.3851, 42.5897, 77.4075, 45.5719, 81.4166, 48.5663, 85.4189, 51.5579, 89.4368, 54.5417, 93.4735, 57.4934, 97.5476, 60.3918, 101.689, 63.2064, 105.923, 65.8682, 110.324, 68.2536, 112, 69, 116.544, 71.0906, 121.035, 73.3044, 125.47, 75.6215, 129.842, 78.036, 134.153, 80.5545, 138.403, 83.1929, 142.562, 85.9579, 146.625, 88.8859, 150.535, 92.0041, 154.222, 95.3708, 157.558, 99.1015, 160.18, 103.354, 161.096, 108.273, 158.885, 112.76, 156, 115, 151.763, 117.666, 147.693, 120.558, 143.666, 123.535, 139.642, 126.501, 135.567, 129.406, 131.418, 132.201, 127.171, 134.847, 122.821, 137.299, 118.35, 139.522, 113.755, 141.478, 109.043, 143.127, 104.221, 144.433, 99.3196, 145.364, 94.3484, 145.9, 89.3552, 146.029, 84.354, 145.752, 79.4121, 145.084, 74.5208, 144.043, 69.7244, 142.664, 65.0118, 140.968, 60.4083, 138.993, 55.9195, 136.769, 51.559, 134.332, 51, 134, 46.8902, 131.155, 42.9437, 128.062, 39.1935, 124.736, 35.6612, 121.193, 32.3543, 117.442, 29.28, 113.49, 26.4605, 109.374, 23.889, 105.096, 21.5616, 100.657, 19.4987, 96.113, 17.6871, 91.4565, 16.1229, 86.6943, 14.8107, 81.8615, 13.7464, 76.9686, 12.9295, 72.0421, 12.3547, 67.0724, 12.0251, 62.0936, 11.9421, 57.0958, 12.1143, 52.0929, 12.5542, 47.1131, 13.2825, 42.1724, 14.3348, 37.2937, 15.7772, 32.503, 17.7238, 27.8899, 20.4085, 23.6728 )
script = ExtResource( 5 )
path_node_path = NodePath("../VectorPath")

[node name="VectorFill" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 21, 23, 24.909, 19.8899, 29.8407, 19.1009, 34.7864, 19.8852, 39.5202, 21.481, 44.0782, 23.537, 48.4939, 25.8802, 52.8022, 28.4191, 57.0288, 31.0988, 61.1858, 33.8782, 65.2839, 36.7281, 69.3509, 39.6401, 73.3851, 42.5897, 77.4075, 45.5719, 81.4166, 48.5663, 85.4189, 51.5579, 89.4368, 54.5417, 93.4735, 57.4934, 97.5476, 60.3918, 101.689, 63.2064, 105.923, 65.8682, 110.324, 68.2536, 112, 69, 116.544, 71.0906, 121.035, 73.3044, 125.47, 75.6215, 129.842, 78.036, 134.153, 80.5545, 138.403, 83.1929, 142.562, 85.9579, 146.625, 88.8859, 150.535, 92.0041, 154.222, 95.3708, 157.558, 99.1015, 160.18, 103.354, 161.096, 108.273, 158.885, 112.76, 156, 115, 151.763, 117.666, 147.693, 120.558, 143.666, 123.535, 139.642, 126.501, 135.567, 129.406, 131.418, 132.201, 127.171, 134.847, 122.821, 137.299, 118.35, 139.522, 113.755, 141.478, 109.043, 143.127, 104.221, 144.433, 99.3196, 145.364, 94.3484, 145.9, 89.3552, 146.029, 84.354, 145.752, 79.4121, 145.084, 74.5208, 144.043, 69.7244, 142.664, 65.0118, 140.968, 60.4083, 138.993, 55.9195, 136.769, 51.559, 134.332, 51, 134, 46.8902, 131.155, 42.9437, 128.062, 39.1935, 124.736, 35.6612, 121.193, 32.3543, 117.442, 29.28, 113.49, 26.4605, 109.374, 23.889, 105.096, 21.5616, 100.657, 19.4987, 96.113, 17.6871, 91.4565, 16.1229, 86.6943, 14.8107, 81.8615, 13.7464, 76.9686, 12.9295, 72.0421, 12.3547, 67.0724, 12.0251, 62.0936, 11.9421, 57.0958, 12.1143, 52.0929, 12.5542, 47.1131, 13.2825, 42.1724, 14.3348, 37.2937, 15.7772, 32.503, 17.7238, 27.8899, 20.4085, 23.6728 )
script = ExtResource( 5 )
path_node_path = NodePath("../VectorPath")

[node name="VectorStroke" type="Line2D" parent="."]
points = PoolVector2Array( 21, 23, 24.909, 19.8899, 29.8407, 19.1009, 34.7864, 19.8852, 39.5202, 21.481, 44.0782, 23.537, 48.4939, 25.8802, 52.8022, 28.4191, 57.0288, 31.0988, 61.1858, 33.8782, 65.2839, 36.7281, 69.3509, 39.6401, 73.3851, 42.5897, 77.4075, 45.5719, 81.4166, 48.5663, 85.4189, 51.5579, 89.4368, 54.5417, 93.4735, 57.4934, 97.5476, 60.3918, 101.689, 63.2064, 105.923, 65.8682, 110.324, 68.2536, 112, 69, 116.544, 71.0906, 121.035, 73.3044, 125.47, 75.6215, 129.842, 78.036, 134.153, 80.5545, 138.403, 83.1929, 142.562, 85.9579, 146.625, 88.8859, 150.535, 92.0041, 154.222, 95.3708, 157.558, 99.1015, 160.18, 103.354, 161.096, 108.273, 158.885, 112.76, 156, 115, 151.763, 117.666, 147.693, 120.558, 143.666, 123.535, 139.642, 126.501, 135.567, 129.406, 131.418, 132.201, 127.171, 134.847, 122.821, 137.299, 118.35, 139.522, 113.755, 141.478, 109.043, 143.127, 104.221, 144.433, 99.3196, 145.364, 94.3484, 145.9, 89.3552, 146.029, 84.354, 145.752, 79.4121, 145.084, 74.5208, 144.043, 69.7244, 142.664, 65.0118, 140.968, 60.4083, 138.993, 55.9195, 136.769, 51.559, 134.332, 51, 134, 46.8902, 131.155, 42.9437, 128.062, 39.1935, 124.736, 35.6612, 121.193, 32.3543, 117.442, 29.28, 113.49, 26.4605, 109.374, 23.889, 105.096, 21.5616, 100.657, 19.4987, 96.113, 17.6871, 91.4565, 16.1229, 86.6943, 14.8107, 81.8615, 13.7464, 76.9686, 12.9295, 72.0421, 12.3547, 67.0724, 12.0251, 62.0936, 11.9421, 57.0958, 12.1143, 52.0929, 12.5542, 47.1131, 13.2825, 42.1724, 14.3348, 37.2937, 15.7772, 32.503, 17.7238, 27.8899, 20.4085, 23.6728, 20.9217, 23.0623, 21, 23 )
width_curve = SubResource( 1 )
default_color = Color( 0, 0, 0, 1 )
gradient = SubResource( 2 )
joint_mode = 1
antialiased = true
script = ExtResource( 6 )
path_node_path = NodePath("../VectorPath")
use_data_nodes_width = true
use_data_nodes_color = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="VectorCollision" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
polygon = PoolVector2Array( 21, 23, 24.909, 19.8899, 29.8407, 19.1009, 34.7864, 19.8852, 39.5202, 21.481, 44.0782, 23.537, 48.4939, 25.8802, 52.8022, 28.4191, 57.0288, 31.0988, 61.1858, 33.8782, 65.2839, 36.7281, 69.3509, 39.6401, 73.3851, 42.5897, 77.4075, 45.5719, 81.4166, 48.5663, 85.4189, 51.5579, 89.4368, 54.5417, 93.4735, 57.4934, 97.5476, 60.3918, 101.689, 63.2064, 105.923, 65.8682, 110.324, 68.2536, 112, 69, 116.544, 71.0906, 121.035, 73.3044, 125.47, 75.6215, 129.842, 78.036, 134.153, 80.5545, 138.403, 83.1929, 142.562, 85.9579, 146.625, 88.8859, 150.535, 92.0041, 154.222, 95.3708, 157.558, 99.1015, 160.18, 103.354, 161.096, 108.273, 158.885, 112.76, 156, 115, 151.763, 117.666, 147.693, 120.558, 143.666, 123.535, 139.642, 126.501, 135.567, 129.406, 131.418, 132.201, 127.171, 134.847, 122.821, 137.299, 118.35, 139.522, 113.755, 141.478, 109.043, 143.127, 104.221, 144.433, 99.3196, 145.364, 94.3484, 145.9, 89.3552, 146.029, 84.354, 145.752, 79.4121, 145.084, 74.5208, 144.043, 69.7244, 142.664, 65.0118, 140.968, 60.4083, 138.993, 55.9195, 136.769, 51.559, 134.332, 51, 134, 46.8902, 131.155, 42.9437, 128.062, 39.1935, 124.736, 35.6612, 121.193, 32.3543, 117.442, 29.28, 113.49, 26.4605, 109.374, 23.889, 105.096, 21.5616, 100.657, 19.4987, 96.113, 17.6871, 91.4565, 16.1229, 86.6943, 14.8107, 81.8615, 13.7464, 76.9686, 12.9295, 72.0421, 12.3547, 67.0724, 12.0251, 62.0936, 11.9421, 57.0958, 12.1143, 52.0929, 12.5542, 47.1131, 13.2825, 42.1724, 14.3348, 37.2937, 15.7772, 32.503, 17.7238, 27.8899, 20.4085, 23.6728 )
script = ExtResource( 7 )
path_node_path = NodePath("../../VectorPath")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "test"
anims/RESET = SubResource( 3 )
anims/test = SubResource( 4 )

[connection signal="shape_changed" from="VectorPath" to="VectorFill2" method="update_fill"]
[connection signal="shape_changed" from="VectorPath" to="VectorFill" method="update_fill"]
[connection signal="shape_changed" from="VectorPath" to="VectorStroke" method="update_shape"]
[connection signal="shape_changed" from="VectorPath" to="StaticBody2D/VectorCollision" method="update_polygon"]
[connection signal="stroke_data_changed" from="VectorPath" to="VectorStroke" method="update_data"]
